syntax = "proto3";
import "main.proto";

package vip.grpc.health.v1;

message HealthCheckOrWatchRequest {
  string serviceName = 1;
}

message HealthCheckOrWatchResponse {
  optional ErrorTrace error=1;
  optional string data=2;
}

message HealthListRequest {}

message HealthListResponse{
  optional ErrorTrace error=1;
  map<string,string> data=2;
}

service Health {
  rpc Check(HealthCheckOrWatchRequest) returns (HealthCheckOrWatchResponse);
  rpc Watch(HealthCheckOrWatchRequest) returns (stream HealthCheckOrWatchResponse);
  rpc List(HealthListRequest) returns (HealthListResponse);
}
