syntax = "proto3";

import "google/protobuf/any.proto";

package vip.grpc.main;

message ErrorTrace {
  string traceId=1;
  optional string message = 2;
}

message GrpcResponse {
  optional ErrorTrace error=1;
  // data字段，数据类型自行拓展
  optional google.protobuf.Any data=2;
}

message GrpcHealthResponse {
  string traceId=1;
  optional ErrorTrace error=2;
  map<string,google.protobuf.Any> data=3;
}
